--- a/index.html
+++ b/index.html
@@ -557,11 +557,11 @@
                 <address class="mobile-menu-address">
                     <ul class="mobile-menu-address-list">
                         <li class="mobile-menu-address-item">
-                            <a class="mobile-menu-address-link" href="" type="tel">+11
+                            <a class="mobile-menu-address-link" href="tel:+110001111111">+11
                                 (000) 111-11-11</a>
                         </li>
                         <li class="mobile-menu-address-item">
-                            <a class="mobile-menu-address-link" href="" type="email">info@devstudio.com</a>
+                            <a class="mobile-menu-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
                     </ul>
                 </address>
