--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             <nav class="mobile-menu-nav">
                 <ul class="mobile-menu-list">
                     <li class="mobile-menu-item">
-                        <a class="mobile-menu-link" href="">Studio</a>
+                        <a class="mobile-menu-link" href="./index.html">Studio</a>
                     </li>
                     <li class="mobile-menu-item">
                         <a class="mobile-menu-link" href="">Portfolio</a>
@@ -566,22 +566,26 @@
                     </ul>
                 </address>
                 <ul class="mobile-menu-social-list">
-                    <li class="mobile-menu-social-item"><a href="" class="mobile-menu-social-link">
+                    <li class="mobile-menu-social-item"><a href="https://www.instagram.com/"
+                            class="mobile-menu-social-link">
                             <svg class="mobile-menu-social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg></a>
                     </li>
-                    <li class="mobile-menu-social-item"><a href="" class="mobile-menu-social-link">
+                    <li class="mobile-menu-social-item"><a href="./images/icons.svg#icon-twitter"
+                            class="mobile-menu-social-link">
                             <svg class="mobile-menu-social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg></a>
                     </li>
-                    <li class="mobile-menu-social-item"><a href="" class="mobile-menu-social-link">
+                    <li class="mobile-menu-social-item"><a href="https://www.facebook.com/"
+                            class="mobile-menu-social-link">
                             <svg class="mobile-menu-social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg></a>
                     </li>
-                    <li class="mobile-menu-social-item"><a href="" class="mobile-menu-social-link">
+                    <li class="mobile-menu-social-item"><a href="./images/icons.svg#icon-linkedin"
+                            class="mobile-menu-social-link">
                             <svg class="mobile-menu-social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg></a>
